# beidou_ros2_driver

./: CMakeLists.txt  Readme.md  beidou_stream_node.cc  package.xml
config/: serial_stream.yaml
launch/: launch.py
msg/: Inspva.msg
parser/: data_parser.cc  data_parser.h  novatel_messages.h  novatel_parser.cc  parser.h
stream/: raw_stream.cc  raw_stream.h  serial_stream.cc  stream.h
